# harness-mp

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  dev-link.sh
.claude-plugin/: marketplace.json
.claude/hooks/: auto-sync.sh
.claude/megatron/: pyproject.toml
.claude/megatron/megatron_mcp/: mcp_server.py  project_memory.py
.claude/skills/recall/: SKILL.md
.claude/skills/stats/: SKILL.md
plugins/claude-code-setup/.claude-plugin/: plugin.json
plugins/claude-md-management/.claude-plugin/: plugin.json
plugins/dev/: README.md
plugins/dev/.claude-plugin/: plugin.json
plugins/engram-mcp/: .gitignore  CLAUDE.md  README.md  install.sh  uninstall.sh
plugins/engram-mcp/commands/: remember.md  resume.md  search.md  stats.md  sync.md
plugins/engram-mcp/hooks/: hooks.json
plugins/engram-mcp/scripts/: live-index.sh  prompt-submit.sh  session-start.sh
plugins/engram/.claude-plugin/: plugin.json
plugins/engram/engram/: chunker.py  cli.py  live_indexer.py  mcp_server.py  project_memory.py
plugins/engram/hooks/: hooks.json
plugins/engram/scripts/: live-index.sh
plugins/harness/: CHANGELOG.md  LICENSE  README.md
plugins/harness-direct/.claude-plugin/: plugin.json
plugins/harness/.claude-plugin/: plugin.json
plugins/harness/commands/: feature.md  init.md
plugins/harness/config/: workflow.yaml
plugins/megatron/: .mcp.json  README.md
plugins/megatron-mcp/: README.md
plugins/megatron/claude-memory/: .gitignore  CLAUDE.md  pyproject.toml
plugins/megatron/claude-memory/claude_memory/: __init__.py  cli.py  mcp_server.py
(+77 files in other folders)
